# mv-django

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  docker-compose.yml.j2  package-lock.json  package.json  pyproject.toml
.github/workflows/: cicd.yml
config/: adapters.py  asgi.py  settings.py  urls.py  wsgi.py
content/: context_processors.py  models.py  views.py
content/migrations/: 0001_initial.py  0002_aboutpage_historicalcontextpage.py  0003_generalpage_remove_historicalcontextpage_page_ptr_and_more.py  0004_alter_generalpage_content.py  0005_blogindexpage_blogpost.py  0006_generalpage_author_generalpage_summary.py
content/templatetags/: navigation_tags.py
docs/: index.md  installation.md
fixtures/: weapon_types.csv  weapon_types.json
historical_dates/: README.md  admin.py  apps.py  fields.py  forms.py  models.py  tests.py  utils.py
historical_dates/migrations/: 0001_initial.py  0002_alter_historicaldate_edtf_date.py
locations/: models.py  tests.py  views.py
locations/migrations/: 0001_initial.py  0002_city_remove_location_parish_and_more.py  0002_location_admin_unit_location_current_name_and_more.py  0003_remove_location_unique_location_in_city_and_more.py  0004_location_urban_rural.py  0005_classify_urban_rural.py  0006_alter_city_options_alter_location_options_and_more.py  0007_city_country_city_region.py
mapping_violence/: admin.py  api.py  apps.py  context_helpers.py  dashboard.py  filters.py  forms.py  models.py  resources.py  tables.py  test_location_widget.py  views.py
mapping_violence/migrations/: 0001_initial.py  0002_alter_crime_options_and_more.py  0002_alter_event_options.py  0003_crime_updated_by_alter_crime_address_and_more.py  0003_rename_liturgical_occassion_crime_liturgical_occasion.py  0004_alter_crime_date_alter_crime_historical_date.py  0004_weaponcategory_crime_accord_crime_accord_date_and_more.py  0005_alter_crime_input_by.py  0005_witness_crime.py  (+15 more)
static-data/: master-data.csv  modena-data.csv  rose_data.csv
templates/: 403.html  403_csrf.html  404.html  429.html  500.html  base.html  index.html  index_old.html  profile.html
util/: csv_to_fixture.py
(+49 files in other folders)
